# prospectmailut

./: README.md
prospectmail/: .gitignore  CMakeLists.txt  LICENSE  Main.qml  Makefile  Modele.qml  Ok.qml  README.md  clickable.yaml  command.sh  compiledeps.sh  desktop-common.sh  desktop-gnome-specific.sh  desktop-init.sh  formatshell.sh  get.sh  get_git.sh  killprospect.sh  launcher.sh  launcher_prospect.sh  make_project.sh  maliit.sh  manifest.json  package.json  prospectmail.apparmor  prospectmail.desktop  zoom.sh
prospectmail/notifysrc/src/: main.cpp  pushclient.cpp
prospectmail/patches/: custom.css  mail-window-controller.js  main.js  package.json  tray-controller.js
prospectmail/qml/: Ok.qml  Settings.qml
prospectmail/qml-notify-module/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
prospectmail/qml-notify-module/NotificationsPlugin_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
prospectmail/src/: main.cpp  pushclient.cpp
prospectmail/utils/: auto_zoom.sh  cat.sh  close.sh  copy  copy.sh  cut.sh  cut.sh.sample  daemon.sh  firstinstall  firstinstall.c  kill_prospect.sh  ls.sh  menusettings.sh  mkdir  mkdir.c  quicksleep.sh  reset_zoom.sh  rm.sh  rmdir.sh  settings  settings.json  settings.sh  shortsleep.sh  verify_flag.sh  zoom.sh  zoomkey.sh
prospectmail/utils/xdg-open/: CMakeLists.txt  Makefile  xdg-open-test  xdg-open-test.cpp  xdg-open.cpp
prospectmail/utils/zlib/: compress.lo  crc32.lo  deflate.lo  example  example64  examplesh  gzclose.lo  gzlib.lo  gzread.lo  gzwrite.lo  infback.lo  inffast.lo  inflate.lo  minigzip  (+6 more)
(+5 files in other folders)
